// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ViewDetailsButton renders correct if message_id is absent 1`] = `
<div
  className="AlignRight"
>
  <PageLink
    as={[Function]}
    size="small"
    to={
      Object {
        "pathname": "/reports/message-events/details/_noid_/456xyz",
      }
    }
    variant="minimal"
  >
    <span>
      View Details
    </span>
    <ChevronRight />
  </PageLink>
</div>
`;

exports[`Component ViewDetailsButton renders correctly when message_id exists 1`] = `
<div
  className="AlignRight"
>
  <PageLink
    as={[Function]}
    size="small"
    to={
      Object {
        "pathname": "/reports/message-events/details/123abc/456xyz",
      }
    }
    variant="minimal"
  >
    <span>
      View Details
    </span>
    <ChevronRight />
  </PageLink>
</div>
`;
